    Issue #722 by Hanmac.
  * Now :all is a synonym for :private for RDoc::Options#visibility= to match
    the --all command line option.  Pull request #276 by Zachary Scott.

* Bug fixes
  * RDoc handles ASCII-incompatible encodings now.  An encoding hint may need
    to be added to the file for RDoc to produce correct output, though.
    Issue #288 by Manuel Meurer.

=== 4.1.1 / 2014-01-09

* Bug fixes
  * Fixed reporting of undocumented method parameters when including when
    yield and &block are present.  Pull request #281 by Victor Bilyk.
  * Fixed merging of rd-style and hash-style comments at the top of a file.
    Bug #266 by Zachary Scott.
  * Fixed Document-attr in the C parser.  Bug #271 by Hanmac.
  * Removed duplicated condition in superclass fixup.  Pull request #282 by
    Benoit Daloze.

=== 4.1.0 / 2013-12-26

* Notable changes
  * Improved accessibility of HTML output.  Accessibility review was provided
    by:

    Techvision – http://www.techvision.net.in

    The accessibility consultants in Pune, India

  * The look of RDoc has been updated.

* Minor enhancements
  * RDoc can now link to [], []=, << and >> methods.  Pull request #202 by
    Jeremy Evans, Bug # 191 by by Zachary Scott.
  * Added RDoc::Options#output_decoration which controls header labels for
    HTML output.  Pull Request #199 by Zachary Scott.
  * Added --template-stylesheets options to RDoc to allow specification of
    alternate stylesheets.  Pull request #205 by Zachary Scott.
  * Improved performance of the Markdown and RD parsers.  Pull request #217 by
    Ryan Davis.
  * <code>rdoc -v</code> now prints the version instead of enabling verbose
    mode.  Pull request #201 by Lee Jarvis.
  * Running <code>rake newb</code> now automatically installs development
    dependencies if the parser files haven't been built.  Pull request #235 by
    Kouhei Sutou.
  * Moved old DEVELOPERS file to CONTRIBUTING to match github conventions.